k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
  - port: 5000
    targetPort: 5000
